--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1,4 +1,3 @@
-
 @article{abbasiCorrelationsLeafEconomics2021,
   title = {Correlations between Leaf Economics, Hydraulic, and Shade-Tolerance Traits among Co-Occurring Individual Trees},
   author = {Abbasi, Umar Aftab and You, Wen-Hui and Yan, En-Rong},
@@ -5903,6 +5902,24 @@
   file = {/Users/nidhivinod/Zotero/storage/RYBN2SXE/Ishida et al. - 1999 - Diurnal changes in leaf gas exchange and chlorophy.pdf}
 }
 
+@article{ishidaLeafGasExchange1999,
+  title = {Leaf Gas Exchange and Cholorphyll Fluorescence in Relation to Leaf Angle, Azimuth, and Canopy Position in the Tropical Pioneer Tree, {{Macaranga}} Conifera},
+  author = {Ishida, Atsushi and Toma, Takeshi and M, Marjenah},
+  date = {1999-02},
+  journaltitle = {Tree Physiology},
+  shortjournal = {Tree Physiol},
+  volume = {19},
+  number = {2},
+  eprint = {12651591},
+  eprinttype = {pmid},
+  pages = {117--124},
+  issn = {1758-4469},
+  doi = {10.1093/treephys/19.2.117},
+  abstract = {We tested the hypothesis that, in tropical pioneer tree species, vertical leaf angle contributes to high carbon gain because it minimizes damage caused by high irradiances. Diurnal changes in leaf gas exchange and chlorophyll fluorescence were measured in east-facing (EL), west-facing (WL) leaves, and in leaves artificially held horizontal (HL) in the uppermost canopy of Macaranga conifera (Zoll.) Muell. Arg. Maximum values of net photosynthetic rate (P(n)) for EL and HL reached 12 \&mgr;mol m(-2) s(-1), whereas maximum P(n) for WL was only 6 \&mgr;mol m(-2) s(-1). Midday depressions of P(n) and stomatal conductance occurred at high photosynthetic photon flux densities (PPFD), especially for HL. Photosystem II quantum yield (DeltaF/F(m)') of HL for a given PPFD at the leaf surface was lower in the afternoon than in the morning. Values of DeltaF/F(m)' for HL measured at dusk were lower than those measured just before dawn, suggesting that HL suffered from high light and heat load. Variations in the morphology and physiology of the canopy leaves were associated with different light environments, and there was circumstantial evidence of a transitional point at a PPFD of about 20-30\% of full sunlight. Maximum P(n) and nitrogen (N) content were higher in upper canopy leaves than in lower canopy leaves, and the differences were mainly associated with differences in lamina thickness. We conclude that the vertical leaf angle and thick lamina of the top canopy leaves contributed to enhance total carbon gain of the whole plant.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/8UPX2M9E/Ishida et al. - 1999 - Leaf gas exchange and cholorphyll fluorescence in .pdf}
+}
+
 @article{ishidaLimitationLeafCarbon1999,
   title = {Limitation of Leaf Carbon Gain by Stomatal and Photochemical Processes in the Top Canopy of {{Macaranga}} Conifera, a Tropical Pioneer Tree},
   author = {Ishida, Atsushi and Toma, Takeshi and {Marjenah}},
@@ -8070,6 +8087,20 @@
   langid = {english},
   keywords = {Biophysical ecology,Climate,Evapotranspiration,Mechanistic model,R package,Temperature},
   file = {/Users/nidhivinod/Zotero/storage/HS7YWHR2/Maclean and Klinges - 2021 - Microclimc A mechanistic model of above, below an.pdf}
+}
+
+@article{macleanMicroclimcMechanisticModel2021a,
+  title = {Microclimc: {{A}} Mechanistic Model of above, below and within-Canopy Microclimate},
+  shorttitle = {Microclimc},
+  author = {Maclean, Ilya and Klinges, David},
+  date = {2021-07-01},
+  journaltitle = {Ecological Modelling},
+  shortjournal = {Ecological Modelling},
+  volume = {451},
+  pages = {109567},
+  doi = {10.1016/j.ecolmodel.2021.109567},
+  abstract = {Climate strongly influences ecological patterns and processes at scales ranging from local to global. Studies of ecological responses to climate usually rely on data derived from weather stations, where temperature and humidity may differ substantially from that in the microenvironments in which organisms reside. To help remedy this, we present a model that leverages first principles physics to predict microclimate above, within, and below the canopy in any terrestrial location on earth, made freely available as an R software package. The model can be run in one of two modes. In the first, heat and vapour exchange within and below canopy are modelled as transient processes, thus accounting for fine temporal-resolution changes. In the second, steady-state conditions are assumed, enabling conditions at hourly intervals or longer to be estimated with greater computational efficiency. We validated both modes of the model with empirical below-canopy thermal measurements from several locations globally, resulting in hourly predictions with mean absolute error of 2.77 °C and 2.79 °C for the transient and steady-state modes respectively. Alongside the microclimate model, several functions are provided to assist data assimilation, as well as different parameterizations to capture a variety of habitats, allowing flexible application even when little is known about the study location. The model's modular design in a programming language familiar to ecological researchers provides easy access to the modelling of site-specific climate forcing, in an attempt to more closely unify the fields of micrometeorology and ecology.},
+  file = {/Users/nidhivinod/Zotero/storage/KHXF85ZN/Maclean and Klinges - 2021 - Microclimc A mechanistic model of above, below an.pdf}
 }
 
 @article{maesPlantFunctionalTrait2020,
@@ -13064,6 +13095,25 @@
   file = {/Users/nidhivinod/Zotero/storage/VFBP8B9C/Slot et al. - Large differences in leaf cuticle conductance and .pdf}
 }
 
+@article{slotLargeDifferencesLeaf2021,
+  title = {Large Differences in Leaf Cuticle Conductance and Its Temperature Response among 24 Tropical Tree Species from across a Rainfall Gradient},
+  author = {Slot, Martijn and Nardwattanawong, Tantawat and Hernández, Georgia G. and Bueno, Amauri and Riederer, Markus and Winter, Klaus},
+  date = {2021},
+  journaltitle = {New Phytologist},
+  volume = {232},
+  number = {4},
+  pages = {1618--1631},
+  issn = {1469-8137},
+  doi = {10.1111/nph.17626},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/nph.17626},
+  urldate = {2022-10-28},
+  abstract = {More frequent droughts and rising temperatures pose serious threats to tropical forests. When stomata are closed under dry and hot conditions, plants lose water through leaf cuticles, but little is known about cuticle conductance (gmin) of tropical trees, how it varies among species and environments, and how it is affected by temperature. We determined gmin in relation to temperature for 24 tropical tree species across a steep rainfall gradient in Panama, by recording leaf drying curves at different temperatures in the laboratory. In contrast with our hypotheses, gmin did not differ systematically across the rainfall gradient; species differences did not reflect phylogenetic patterns; and in most species gmin did not significantly increase between 25 and 50°C. gmin was higher in deciduous than in evergreen species, in species with leaf trichomes than in species without, in sun leaves than in shade leaves, and tended to decrease with increasing leaf mass per area across species. There was no relationship between stomatal and cuticle conductance. Large species differences in gmin and its temperature response suggest that more frequent hot droughts may lead to differential survival among tropical tree species, regardless of species’ position on the rainfall gradient.},
+  langid = {english},
+  keywords = {cuticle conductance,drought tolerance,functional traits,global warming,Panama,rainfall gradient,transpiration,tropical forest},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17626},
+  file = {/Users/nidhivinod/Zotero/storage/LIMR2XFS/Slot et al. - 2021 - Large differences in leaf cuticle conductance and .pdf}
+}
+
 @report{slotLeafHeatTolerance2020,
   type = {preprint},
   title = {Leaf Heat Tolerance of 147 Tropical Forest Species Varies with Elevation and Leaf Functional Traits, but Not with Phylogeny},
@@ -15949,5 +15999,4 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-3040.2003.01153.x},
   file = {/Users/nidhivinod/Zotero/storage/TINTB6VH/Zwieniecki et al. - 2004 - Hydraulic limitations imposed by crown placement d.pdf;/Users/nidhivinod/Zotero/storage/4HL6GUYZ/j.1365-3040.2003.01153.html}
 }
-
 
